@@ -55,6 +55,8 @@
 
 	* common/toolcommon/tool-config-file-common.c: Remove legacy config file options.
 
+	* ipmi-oem: Remove legacy OEM Dell commands.
+
 2020-01-28 Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
